# FilesSortManager

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sort.py
.github/ISSUE_TEMPLATE/: bug_report.md
presets/: mainpreset.json
src/: main.py  sort.py
